--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -12,5 +12,6 @@
     <string name="hindi">हिंदी</string>
     <string name="Maithili">মৈথিলী</string>
     <string name="bhojpuri">भोजपुरी</string>
+    <string name="_91">+91</string>
 
 </resources>
